..F....... [ZBX-26742] fixed text overlap in popups for portuguese language

--- a/sass/stylesheets/sass/_screen.scss
+++ b/sass/stylesheets/sass/_screen.scss
@@ -2068,6 +2068,15 @@ select {
 	}
 }
 
+// Modals.
+.modal-popup.modal-popup-static {
+	&.modal-popup-sla-edit,
+	&.modal-popup-proxy-edit,
+	&.modal-popup-connector-edit {
+		--modal-max-width: 750px;
+	}
+}
+
 // Multiline input control.
 .multilineinput-control {
 	display: flex;
